refactor : refactor design pattern